Bug 561221 - nsDocumentEncoder should not use nsIDOM* interfaces internally, r=sicking